# beer-log

./: LICENSE  README.md  pyproject.toml
src/beer_log/: __init__.py  beer.py  main.py  template_environment.py  utils.py
src/beer_log/templates/: base.html  beer.html  beer_page.html  brewery_page.html  checkin_page.html
