[project]
name = "beer-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PeskyPotato", email = "pesky@pesky.moe" }
]
requires-python = ">=3.10"
dependencies = [
    "html2text>=2025.4.15",
    "jinja2>=3.1.6",
    "rss-py @ git+https://github.com/PeskyPotato/rss_py.git@main",
]

[project.scripts]
beer-log = "beer_log:entry"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
rss-py = { git = "https://github.com/PeskyPotato/rss_py.git", rev = "main" }
